--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ xcuserdata/
 .build/
 Packages/
 
+# CocoaPods
+Pods/
+*.xcworkspace
+
+# Carthage
+Carthage/Build
+
+# Fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+
+# SwiftPM
+.swiftpm/xcode/package.xcworkspace/
+
